# 3D-Slicer-Extension

./: README.md
Tumor_Segmenatation/: CMakeLists.txt
Tumor_Segmenatation/Tumor_Segmentation/: CMakeLists.txt
